Responsive mobile for previous changes & Fix note words-wrap

--- a/src/components/Notes/AddNote/AddNote.module.scss
+++ b/src/components/Notes/AddNote/AddNote.module.scss
@@ -184,14 +184,27 @@
         input,
         textarea {
           font-size: $small_font;
+
+          &::-webkit-scrollbar {
+            display: none;
+          }
         }
 
         input {
           height: 40px;
         }
 
+        .word-length {
+          position: absolute;
+          bottom: 0.5rem;
+          right: 0.5rem;
+          font-size: 1rem;
+          color: white;
+        }
+
         .error {
           font-size: 1rem;
+          transform: translateX(3rem);
         }
       }
 
