--- a/src/components/Notes/SingleNote/SingleNote.module.scss
+++ b/src/components/Notes/SingleNote/SingleNote.module.scss
@@ -10,6 +10,7 @@
   .note-content {
     text-align: center;
     padding: 1rem;
+    word-wrap: break-word;
 
     h3 {
       text-decoration: wavy underline $dark_blue;
